<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#DD8247">

                <ImageView
                    android:id="@+id/halfcir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/arc_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/arc_3" />

                <ImageView
                    android:id="@+id/prof"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:src="@drawable/start"
                    app:layout_constraintBottom_toTopOf="@+id/halfcir"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/halfcir"
                    app:srcCompat="@drawable/start" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <EditText
                    android:id="@+id/text44"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_margin="32dp"
                    android:layout_marginStart="171dp"
                    android:layout_marginEnd="202dp"
                    android:ems="10"
                    android:hint="@string/text44"
                    android:inputType="text"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.398"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ii2"
                    app:layout_constraintVertical_bias="0.237" />

                <EditText
                    android:id="@+id/ii2"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_margin="32dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="377dp"
                    android:layout_marginEnd="202dp"
                    android:ems="10"
                    android:hint="@string/ii2"
                    android:inputType="text"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <EditText
                    android:id="@+id/text33"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_margin="32dp"
                    android:layout_marginStart="171dp"
                    android:layout_marginEnd="202dp"
                    android:ems="10"
                    android:hint="@string/text33"
                    android:inputType="text"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.449"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ii2"
                    app:layout_constraintVertical_bias="0.0" />


                <EditText
                    android:id="@+id/text55"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_margin="32dp"
                    android:layout_marginStart="171dp"
                    android:layout_marginEnd="202dp"
                    android:ems="10"
                    android:hint="@string/text55"
                    android:inputType="text"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.449"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ii2"
                    app:layout_constraintVertical_bias="0.442" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_33"
                    style="@android:style/Widget.Button"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="74dp"
                    android:backgroundTint="#DD8247"
                    android:onClick="goooHome"
                    android:text="@string/btn_33"
                    android:textColor="@color/black"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text33"
                    app:layout_constraintVertical_bias="0.456" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView9"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>