<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".Payment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/c2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#DD8247">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/b1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/hc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/arc_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/arc_3" />

                <ImageView
                    android:id="@+id/pro"
                    android:layout_width="160dp"
                    android:layout_height="148dp"
                    android:src="@drawable/user_2"
                    app:layout_constraintBottom_toTopOf="@+id/hc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/hc"
                    app:srcCompat="@drawable/user_2" />

                <TextView
                    android:id="@+id/head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="168dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="168dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/PaymentMethod"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/pro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="621dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/edit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="40dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/CardNumber"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@+id/exp"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/exp"
                    android:layout_width="165dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="28dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/Exp"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@+id/cardname"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/cvv"
                    android:layout_width="146dp"
                    android:layout_height="67dp"
                    android:layout_marginStart="73dp"
                    android:layout_marginEnd="47dp"
                    android:layout_marginBottom="164dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/CVV"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@+id/paynow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.653"
                    app:layout_constraintStart_toEndOf="@+id/exp" />

                <EditText
                    android:id="@+id/cardname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="84dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/name"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@+id/paynow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/paynow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="161dp"
                    android:layout_marginEnd="140dp"
                    android:layout_marginBottom="224dp"
                    android:background="#DD8247"
                    android:backgroundTint="#DD8247"
                    android:onClick="successfull"
                    android:text="@string/paynoww"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/debit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="33dp"
                    android:layout_marginEnd="175dp"
                    android:layout_marginBottom="50dp"
                    android:text="Debit/Credit Card"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/edit1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>